--- a/rendering/base.html
+++ b/rendering/base.html
@@ -88,7 +88,6 @@
     $("#form").validate({
         ignore: ":input[disabled]",
         equalTo: ":input[equalTo]",
-        equalToCheckbox: ":input[equalToCheckbox]",
         notEqualTo: ":input[notEqualTo]",
         lessThan: ":input[lessThan]",
         lessThanEqual: ":input[lessThanEqual]"
@@ -97,14 +96,14 @@
     {#- Add pattern rule #}
     {%- for property in shape["properties"] %}
     {%- if "pattern" in property %}
-    $("#" + $.escapeSelector("{{ property["path"] }}")).rules("add", {
+    $("#{{ property["id"] }}").rules("add", {
         pattern: /{{ property["pattern"] }}/{{ property["flags"] }}
     });
     {%- endif %}
     {%- endfor %}
     {%- for group in shape["groups"] %} {% for property in group["properties"] %}
     {%- if "pattern" in property %}
-    $("#" + $.escapeSelector("{{ property["path"] }}")).rules("add", {
+    $("#{{ property["id"] }}").rules("add", {
         pattern: /{{ property["pattern"] }}/{{ property["flags"] }}
     });
     {%- endif %}
@@ -115,15 +114,6 @@
     $(":input[equalTo]").each(function(index) {
         $(this).rules("add", {
             messages: { equalTo: $.validator.format("Must be equal to {0}",$($(this).attr("equalTo")).attr("label")) }
-        });
-    });
-
-    {#- Sets the message for equalToCheckbox validation #}
-    $(":input[equalToCheckbox]").each(function(index) {
-        $(this).rules("add", {
-            messages: {
-                equalToCheckbox: $.validator.format("Must be equal to {0}",$($(this).attr("equalToCheckbox")).attr("label"))
-            }
         });
     });
 
