--- a/rendering/input_field.html
+++ b/rendering/input_field.html
@@ -2,12 +2,12 @@
 {{ property["hasValue"] }}
 {%- endif %}
 {%- if "in" in property %}
-<select name="{{ property["id"] }}" id="{{ property["id"] }}"
+<select name="{{ property["id"] }}{% if copy is not none %}-{{ copy }}{% endif %}" id="{{ property["id"] }}"
     {%- if disabled==True %} disabled{% endif %}
     {%- if "equals" in property %} equalTo="#{{ property["equals"] }}"{% endif %}
     {%- if "disjoint" in property %} notEqualTo="#{{ property["disjoint"] }}"{% endif %}
     {%- if "lessThan" in property %} lessThan="#{{ property["lessThan"] }}"{% endif %}
-    {%- if "lessThanOrEquals" in property %} lessThanEqual="#{{ property["lessThanorEquals"] }}"{% endif %}
+    {%- if "lessThanOrEquals" in property %} lessThanEqual="#{{ property["lessThanOrEquals"] }}"{% endif %}
     {%- if "hasValue" in property %} hidden><option value="{{ property["hasValue"] }}" selected>{{ property["hasValue"] }}</option>
     {%- else %}>
         {%- for option in property["in"] %}<option value="{{ option }}"
@@ -16,7 +16,7 @@
         {%- endfor %}
     {%- endif %}</select><br />
 {%- else %}
-<input id="{{ property["id"] }}" name="{{ property["id"] }}" label="{{ property["name"] }}"
+<input id="{{ property["id"] }}" name="{{ property["id"] }}{% if copy is not none %}-{{ copy }}{% endif %}" label="{{ property["name"] }}"
 {%- if property["path"] == URIs["EMAIL"] %} type="email"
 {%- elif property["path"] == URIs["PHONE_NUMBER"] %} type="tel"
 {%- elif "datatype" in property %}
