--- a/rendering/property.html
+++ b/rendering/property.html
@@ -1,7 +1,7 @@
-{%- macro input_field(property, disabled=False, required=False) %}
+{%- macro input_field(property, disabled=False, required=False, copy=0) %}
 {%- include "input_field.html" %}
 {%- endmacro -%}
-{%- macro entry(property, disabled=False, required=False) %}
+{%- macro entry(property, disabled=False, required=False, copy=None) %}
 {%- include "entry.html" %}
 {%- endmacro -%}
 
@@ -14,12 +14,12 @@
     {% for l in property["languageIn"] %} {{ l }}{{ "," if not loop.last }}{% endfor %}</i></label><br />
 {%- endif %}
 {%- if "maxCount" in property and property["maxCount"] == 1 and "minCount" in property and property["minCount"] == 1 %}
-    {{- entry(property, required=True) }}
+    {{- entry(property, required=True, copy=0) }}
 {%- else %}
 <div>
-    <div class='template' hidden data-max-entries=
-    {%- if "maxCount" in property %}"{{ property["maxCount"] }}"{% endif %} data-min-entries=
-    {%- if "minCount" in property %}"{{ property["minCount"] }}"{% endif %}>
+    <div class='template' hidden data-max-entries="
+    {%- if "maxCount" in property %}{{ property["maxCount"] }}{% endif %}" data-min-entries="
+    {%- if "minCount" in property %}{{ property["minCount"] }}{% endif %}">
         <div>
             {{- entry(property, disabled=True)|indent(12) }}
         </div>
@@ -27,7 +27,9 @@
     <div class='entries'>
     {%- if "minCount" in property %}
         {%- for i in range(property["minCount"]) %}
-            {{- entry(property, required=True)|indent(8) }}
+        <div>
+            {{- entry(property, required=True, copy=i)|indent(12) }}
+        </div>
         {%- endfor %}
     {%- endif %}
     </div>
