--- a/rendering/input_field.html
+++ b/rendering/input_field.html
@@ -4,10 +4,10 @@
 {%- if "in" in property %}
 <select name="{{ property["id"] }}{% if copy is not none %}-{{ copy }}{% endif %}" id="{{ property["id"] }}"
     {%- if disabled==True %} disabled{% endif %}
-    {%- if "equals" in property %} equalTo="#{{ property["equals"] }}"{% endif %}
-    {%- if "disjoint" in property %} notEqualTo="#{{ property["disjoint"] }}"{% endif %}
-    {%- if "lessThan" in property %} lessThan="#{{ property["lessThan"] }}"{% endif %}
-    {%- if "lessThanOrEquals" in property %} lessThanEqual="#{{ property["lessThanOrEquals"] }}"{% endif %}
+    {%- if "equals" in property %} equalTo="{{ property["equals"] }}"{% endif %}
+    {%- if "disjoint" in property %} notEqualTo="{{ property["disjoint"] }}"{% endif %}
+    {%- if "lessThan" in property %} lessThan="{{ property["lessThan"] }}"{% endif %}
+    {%- if "lessThanOrEquals" in property %} lessThanEqual="{{ property["lessThanOrEquals"] }}"{% endif %}
     {%- if "hasValue" in property %} hidden><option value="{{ property["hasValue"] }}" selected>{{ property["hasValue"] }}</option>
     {%- else %}>
         {%- for option in property["in"] %}<option value="{{ option }}"
@@ -39,9 +39,9 @@
 {%- if "pattern" in property %} title="Must match pattern: /{{ property["pattern"] }}/{{ property["flags"] }}"{% endif %}
 {%- if required==True %} required{% endif %}
 {%- if "maxLength" in property %} maxlength="{{ property["maxLength"] }}"{% endif %}
-{%- if "equals" in property %} equalTo="#{{ property["equals"] }}"{% endif %}
-{%- if "disjoint" in property %} notEqualTo="#{{ property["disjoint"] }}"{% endif %}
-{%- if "lessThan" in property %} lessThan="#{{ property["lessThan"] }}"{% endif %}
-{%- if "lessThanOrEquals" in property %} lessThanEqual="#{{ property["lessThanOrEquals"] }}"{% endif %}
+{%- if "equals" in property %} equalTo="{{ property["equals"] }}"{% endif %}
+{%- if "disjoint" in property %} notEqualTo="{{ property["disjoint"] }}"{% endif %}
+{%- if "lessThan" in property %} lessThan="{{ property["lessThan"] }}"{% endif %}
+{%- if "lessThanOrEquals" in property %} lessThanEqual="{{ property["lessThanOrEquals"] }}"{% endif %}
 {%- if disabled==True %} disabled{% endif %}/>
 {%- endif %}
