--- a/rendering/input_field.html
+++ b/rendering/input_field.html
@@ -29,6 +29,7 @@
         {%- if "hasValue" in property and property["hasValue"] == True %} checked hidden
         {%- elif "defaultValue" in property and property["defaultValue"] == True %} checked{%- endif %}
     {%- else %} type="text"
+        {%- if "pattern" in property %} pattern="{{ property["pattern"] }}" title="Must match pattern: {{ property["pattern"] }}"{% endif %}
         {%- if "hasValue" in property %} hidden value="{{ property["hasValue"] }}"
         {%- elif "defaultValue" in property %} value="{{ property["defaultValue"] }}"
         {%- else %} value=""
@@ -36,7 +37,6 @@
     {%- endif %}
 {%- endif %}
 {#- Stuff that applies no matter the type of input #}
-{%- if "pattern" in property %} title="Must match pattern: /{{ property["pattern"] }}/{{ property["flags"] }}"{% endif %}
 {%- if required==True %} required{% endif %}
 {%- if "maxLength" in property %} maxlength="{{ property["maxLength"] }}"{% endif %}
 {%- if "equals" in property %} equalTo="{{ property["equals"] }}"{% endif %}
