Removed possibility of duplicate ids when generating multiple entries. This interfered with JQuery Validate features.

--- a/rendering/composite_property.html
+++ b/rendering/composite_property.html
@@ -2,7 +2,7 @@
 {%- include "property.html" %}
 {%- endmacro -%}
 
-<fieldset id="{{ property["id"] }}" name="{{ property["id"] }}{% if copy is not none %}-{{ copy }}{% endif %}">
+<fieldset data-property-id="{{ property["id"] }}" name="{{ property["id"] }}{% if copy is not none %}-{{ copy }}{% endif %}">
     {%- if "description" in property %}
     <label for="{{ property["id"] }}"><i>{{ property["description"] }}</i></label><br />
     {%- endif %}
