--- a/rendering/input_field.html
+++ b/rendering/input_field.html
@@ -2,7 +2,7 @@
 {{ property["hasValue"] }}
 {%- endif %}
 {%- if "in" in property %}
-<select name="{{ property["id"] }}{% if copy is not none %}-{{ copy }}{% endif %}" id="{{ property["id"] }}"
+<select name="{{ property["id"] }}{% if copy is not none %}-{{ copy }}{% endif %}" data-property-id="{{ property["id"] }}"
     {%- if disabled==True %} disabled{% endif %}
     {%- if "equals" in property %} equalTo="{{ property["equals"] }}"{% endif %}
     {%- if "disjoint" in property %} notEqualTo="{{ property["disjoint"] }}"{% endif %}
@@ -16,7 +16,7 @@
         {%- endfor %}
     {%- endif %}</select><br />
 {%- else %}
-<input id="{{ property["id"] }}" name="{{ property["id"] }}{% if copy is not none %}-{{ copy }}{% endif %}" label="{{ property["name"] }}"
+<input data-property-id="{{ property["id"] }}" name="{{ property["id"] }}{% if copy is not none %}-{{ copy }}{% endif %}" label="{{ property["name"] }}"
 {%- if property["path"] == URIs["EMAIL"] %} type="email"
 {%- elif property["path"] == URIs["PHONE_NUMBER"] %} type="tel"
 {%- elif "datatype" in property %}
