--- a/rendering/property.html
+++ b/rendering/property.html
@@ -6,11 +6,11 @@
 {%- endmacro -%}
 
 {%- if "maxCount" not in property or property["maxCount"] > 0 %}
-<label for="{{ property["id"] }}">{{ property["name"] }}:</label><br />
+<label>{{ property["name"] }}:</label><br />
 {%- if "description" in property %}
-<label for="{{ property["id"] }}"><i>{{ property["description"] }}</i></label><br />
+<label><i>{{ property["description"] }}</i></label><br />
 {%- endif %}
-{%- if "languageIn" in property %}<label for="{{ property["path"] }}"><i>Language:
+{%- if "languageIn" in property %}<label><i>Language:
     {% for l in property["languageIn"] %} {{ l }}{{ "," if not loop.last }}{% endfor %}</i></label><br />
 {%- endif %}
 {%- if "maxCount" in property and property["maxCount"] == 1 and "minCount" in property and property["minCount"] == 1 %}
