--- a/rendering/input_field.html
+++ b/rendering/input_field.html
@@ -4,10 +4,10 @@
 {%- if "in" in property %}
 <select name="{{ property["id"] }}{% if copy is not none %}-{{ copy }}{% endif %}" data-property-id="{{ property["id"] }}"
     {%- if disabled==True %} disabled{% endif %}
-    {%- if "equals" in property %} equalTo="{{ property["equals"] }}"{% endif %}
-    {%- if "disjoint" in property %} notEqualTo="{{ property["disjoint"] }}"{% endif %}
+    {%- if "equals" in property %} data-equalTo="{{ property["equals"] }}"{% endif %}
+    {%- if "disjoint" in property %} data-notEqualTo="{{ property["disjoint"] }}"{% endif %}
     {%- if "lessThan" in property %} lessThan="{{ property["lessThan"] }}"{% endif %}
-    {%- if "lessThanOrEquals" in property %} lessThanEqual="{{ property["lessThanOrEquals"] }}"{% endif %}
+    {%- if "lessThanOrEquals" in property %} data-lessThanEqual="{{ property["lessThanOrEquals"] }}"{% endif %}
     {%- if "hasValue" in property %} hidden><option value="{{ property["hasValue"] }}" selected>{{ property["hasValue"] }}</option>
     {%- else %}>
         {%- for option in property["in"] %}<option value="{{ option }}"
@@ -16,7 +16,7 @@
         {%- endfor %}
     {%- endif %}</select><br />
 {%- else %}
-<input data-property-id="{{ property["id"] }}" name="{{ property["id"] }}{% if copy is not none %}-{{ copy }}{% endif %}" label="{{ property["name"] }}"
+<input data-property-id="{{ property["id"] }}" name="{{ property["id"] }}{% if copy is not none %}-{{ copy }}{% endif %}" data-label="{{ property["name"] }}"
 {%- if property["path"] == URIs["EMAIL"] %} type="email"
 {%- elif property["path"] == URIs["PHONE_NUMBER"] %} type="tel"
 {%- elif "datatype" in property %}
@@ -39,9 +39,9 @@
 {#- Stuff that applies no matter the type of input #}
 {%- if required==True %} required{% endif %}
 {%- if "maxLength" in property %} maxlength="{{ property["maxLength"] }}"{% endif %}
-{%- if "equals" in property %} equalTo="{{ property["equals"] }}"{% endif %}
-{%- if "disjoint" in property %} notEqualTo="{{ property["disjoint"] }}"{% endif %}
+{%- if "equals" in property %} data-equalTo="{{ property["equals"] }}"{% endif %}
+{%- if "disjoint" in property %} data-notEqualTo="{{ property["disjoint"] }}"{% endif %}
 {%- if "lessThan" in property %} lessThan="{{ property["lessThan"] }}"{% endif %}
-{%- if "lessThanOrEquals" in property %} lessThanEqual="{{ property["lessThanOrEquals"] }}"{% endif %}
+{%- if "lessThanOrEquals" in property %} data-lessThanEqual="{{ property["lessThanOrEquals"] }}"{% endif %}
 {%- if disabled==True %} disabled{% endif %}/>
 {%- endif %}
