Added an example SHACL file for use with this tool. Cleaned up existing example file. Some other small tweaks

--- a/form-generator/rendering/property.html
+++ b/form-generator/rendering/property.html
@@ -6,7 +6,7 @@
 {%- endmacro -%}
 
 {%- if "maxCount" not in property or property["maxCount"] > 0 %}
-<label>{{ property["name"] }}:</label><br />
+<label>{{ property["name"] }}</label><br />
 {%- if "description" in property %}
 <label><i>{{ property["description"] }}</i></label><br />
 {%- endif %}
