--- a/form-generator/rendering/property.html
+++ b/form-generator/rendering/property.html
@@ -11,7 +11,7 @@
 <label><i>{{ property["description"] }}</i></label><br />
 {%- endif %}
 {%- if "languageIn" in property %}<label><i>Language:
-    {% for l in property["languageIn"] %} {{ l }}{{ "," if not loop.last }}{% endfor %}</i></label><br />
+    {%- for l in property["languageIn"] %} {{ l }}{{ "," if not loop.last }}{% endfor %}</i></label><br />
 {%- endif %}
 {%- if "maxCount" in property and property["maxCount"] == 1 and "minCount" in property and property["minCount"] == 1 %}
     {{- entry(property, disabled=disabled, required=True, copy=0) }}
