Fixed bug where hidden input fields for predetermined values were visible.

--- a/form-generator/rendering/input_field.html
+++ b/form-generator/rendering/input_field.html
@@ -19,17 +19,37 @@
 <input data-property-id="{{ property["id"] }}" name="{{ property["id"] }}{% if copy is not none %}-{{ copy }}{% endif %}" data-label="{{ property["name"] }}"
 {%- if property["path"] == URIs["EMAIL"] %} type="email"
     {%- if required==True %} required{% endif %}
+        {%- if "hasValue" in property %} hidden value="{{ property["hasValue"] }}"
+        {%- elif "defaultValue" in property %} value="{{ property["defaultValue"] }}"
+        {%- else %} value=""
+        {%- endif %}
 {%- elif property["path"] == URIs["PHONE_NUMBER"] %} type="tel"
     {%- if required==True %} required{% endif %}
+        {%- if "hasValue" in property %} hidden value="{{ property["hasValue"] }}"
+        {%- elif "defaultValue" in property %} value="{{ property["defaultValue"] }}"
+        {%- else %} value=""
+        {%- endif %}
 {%- elif "datatype" in property %}
     {%- if property["datatype"] in URIs["NUMBER"] %} type="number"
         {%- if required==True %} required{% endif %}
         {%- if "min" in property %} min="{{ property["min"] }}"{% endif %}
         {%- if "max" in property %} max="{{ property["max"] }}"{% endif %}
+        {%- if "hasValue" in property %} hidden value="{{ property["hasValue"] }}"
+        {%- elif "defaultValue" in property %} value="{{ property["defaultValue"] }}"
+        {%- else %} value=""
+        {%- endif %}
     {%- elif property["datatype"] == URIs["DATE"] %} type="date"
         {%- if required==True %} required{% endif %}
+        {%- if "hasValue" in property %} hidden value="{{ property["hasValue"] }}"
+        {%- elif "defaultValue" in property %} value="{{ property["defaultValue"] }}"
+        {%- else %} value=""
+        {%- endif %}
     {%- elif property["datatype"] == URIs["TIME"] %} type="time"
         {%- if required==True %} required{% endif %}
+        {%- if "hasValue" in property %} hidden value="{{ property["hasValue"] }}"
+        {%- elif "defaultValue" in property %} value="{{ property["defaultValue"] }}"
+        {%- else %} value=""
+        {%- endif %}
     {%- elif property["datatype"] == URIs["BOOLEAN"] %} type="checkbox"
         {%- if "hasValue" in property and property["hasValue"] == True %} checked hidden
         {%- elif "defaultValue" in property and property["defaultValue"] == True %} checked{%- endif %}
